# solar_energy_project

./: .gitignore  README.md  ReadMe.md
backend/: Dockerfile  app.py  dump.rdb  minimal_app.py  multiplier  package-lock.json  package.json  requirements.txt  server.js
backend/cache/: combined_data.pkl
backend/simulation/: CMakeLists.txt  adjust_pv.cpp  adjust_pv.h  adjust_pv_bindings.cpp  app.py  config.json  data_processor.py  gui.py  solar_forecasts.csv  test_adjust_pv.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  AzimuthSlider.js  MultiplierSlider.js  SolarDataChart.css  SolarDataChart.js  SolarDataGraph.css  SolarDataGraph.js  SolarDataTable.css  SolarDataTable.js  TableStyles.css  TiltSlider.js  index.css  index.js
